pruebo push con el redis

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.18.1",
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.7",
+    "redis": "^4.1.0",
     "request": "2.88.0",
     "swagger-ui-express": "^4.3.0"
   }
